Fix layout problems

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,7 +12,7 @@ html {
 
 * {
     box-sizing: border-box;
-    font-size: 2.2rem;
+    font-size: clamp(1.8rem, 1.8vw, 2.2rem); 
     margin: 0;
     padding: 0;
 }
@@ -291,7 +291,7 @@ nav {
 .category a {
     position: absolute;
     top: 45%;
-    right: -3.5rem;
+    right: -3.7rem;
     transform: rotate(90deg);
 }
 
@@ -312,11 +312,11 @@ nav {
     border-radius: 1rem;
     padding: 2rem;
     background-color: var(--secondary);
-    border-right: 2rem solid var(--white);
+    border-right: 1.4rem solid var(--white);
 }
 
 .project-img-cont img {
-    border-left: 1rem solid var(--white);
+    border-left: 0.8rem solid var(--white);
     object-fit: cover;
     max-width: 100%;
     height: 100%;
@@ -361,7 +361,7 @@ nav {
 
 .blog-description,
 .blog-img-cont {
-    min-width: 17.5vw;
+    min-width: 16.5vw;
 }
 
 /*Footer*/
@@ -431,6 +431,10 @@ footer > .grid > div:not(#contact) {
 /*Media Queries*/
 
 @media (width <= 1100px) {
+    nav {
+        background-color: var(--primary);
+    }
+
     #nav-links {
         display: none;
     }
@@ -445,6 +449,10 @@ footer > .grid > div:not(#contact) {
 
     #projects {
         grid-template-columns: 1fr;
+    }
+
+    .blog-img-cont img {
+        border-radius: 1rem 1rem 0 0;
     }
 
     footer > .grid {
@@ -520,7 +528,6 @@ footer > .grid > div:not(#contact) {
 }
 
 @media (width <= 470px  ) {
-
     #footer-right,
     #footer-left {
         display: block;
@@ -529,5 +536,13 @@ footer > .grid > div:not(#contact) {
     footer > .grid {
         display: flex;
         flex-wrap: wrap;
+    }
+
+    #firm-img-cont {
+        min-width: 40%;
+    }
+
+    #brand-logo {
+        background-color: var(--secondary);
     }
 }
